# Balance_Bot

./: .gitignore  BOM, Balance Bot 001.xlsx  Balance Bot Lifting Calculations.xlsx  Balance_Bot.pyproj  Balance_Bot.sln  Cone Proportions Calculations.xlsx  README.md  bno055_calibration_data.json  config.py  microbit-Bluetooth-Test.hex  microbit-Wii-Nunchuck-Bluetooth Test-Python.py  microbit-Wii-Nunchuk-Test.hex  microbit-Wii-Nunchuk-to-Bluetooth.hex  program flow.txt  pyproject.toml  requirements.txt  setup.py
Calculations/: Balance Bot Lifting Calculations.xlsx  Balance Bot Module Imports.xlsx  Cone Proportions Calculations.xlsx
Electronics/: Balance Bot Electrical Connection.xlsx  motorstepper_mdd3a.py
Flow Diagram/: balance_bot.drawio
MicroBit/: Nunchuck_MB_Bluetooth.js  microbit-JS-Bluetooth-Test.hex  microbit-Wii-Nunchuk-to-Bluetooth-JS.hex
Raspberry_Pi/: Motor Control Test.py  Motor_Control_2_Motor_Direct.py  balance_bot.py  balance_bot_config.py  bluedot_direction_control.py  bluedot_return_command.py  bluedot_return_coords_test.py  bluedot_test.py  bluezero_central_role_test.py  bluezero_central_role_test.py.save  encoder_sensor.py  encoder_sensor_with_motor_test.py  microbit_manual.py  py_motor_test.py  py_motor_test_auto.py  read_remote_bt.py  rpi_motor.py  sensor_test.py  simple_robot.py  test_microbit.py
archive code/: bno055_sensor.py  microbit_manual.py  motor_control_test.py  test_microbit.py
archive_code/: balance_bot_config.py  bluezero_central_role_test.py  bno055_sensor.py  py_motor_test.py
balance_bot/: __main__.py  balance_bot.py  (+24 more)
(+88 files in other folders)
