[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "balance_bot"
version = "0.1.0"
authors = [
  { name="Paul Jefferies", email="jefferie@umich.edu" },
]
description = "A Balance Bot implementation"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU General Public License v3.0",
    "Operating System :: Linux :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/pjjefferies/Balance_Bot"
"Bug Tracker" = "https://github.com/pjjefferies/Balance_Bot/issues"